rspm-all.yaml
apiVersion: v1
kind: List
metadata: {}
items:
- apiVersion: security.openshift.io/v1
  kind: SecurityContextConstraints
  metadata:
    name: scc-rspm
  allowPrivilegedContainer: true
  runAsUser:
    type: RunAsAny
  seLinuxContext:
    type: RunAsAny
  fsGroup:
    type: RunAsAny
  supplementalGroups:
    type: RunAsAny
  users:
  - rspm-sa
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: rspm-sa
    namespace: package-manager
    labels:
      app: rstudio-package-manager
- apiVersion: rbac.authorization.k8s.io/v1
  kind: Role
  metadata:
    name: rspm-sa
    labels:
      app: rstudio-package-manager
  rules:
    - apiGroups:
        - security.openshift.io
      resources:
        - securitycontextconstraints
      resourceNames: 
        - scc-rspm
      verbs:
        - use
- apiVersion: rbac.authorization.k8s.io/v1
  kind: RoleBinding
  metadata:
    name: rspm-sa
    labels:
      app: rstudio-package-manager
  subjects:
    - kind: ServiceAccount
      name: rspm-sa
      namespace: package-manager
  roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: Role
    name: rspm-sa
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/scc: privileged
    name: rstudio-package-manager
    namespace: package-manager
    labels:
      app: rstudio-package-manager
      app.kubernetes.io/component: rstudio-package-manager
      app.kubernetes.io/instance: rstudio-package-manager
      app.kubernetes.io/name: rstudio-package-manager
      app.kubernetes.io/part-of: rstudio-package-manager-app
      app.openshift.io/runtime: rstudio-package-manager
      app.openshift.io/runtime-namespace: package-manager
      app.openshift.io/runtime-version: 1.2.2.1-17
  spec:
    strategy:
      type: Rolling
      rollingParams:
        updatePeriodSeconds: 1
        intervalSeconds: 1
        timeoutSeconds: 600
        maxUnavailable: 25%
        maxSurge: 25%
      resources: {}
      activeDeadlineSeconds: 21600
    triggers:
      - type: ImageChange
        imageChangeParams:
          automatic: true
          containerNames:
            - rstudio-package-manager
          from:
            kind: ImageStreamTag
            namespace: package-manager
            name: 'rstudio-package-manager:1.2.2.1-17'
          lastTriggeredImage: >-
            image-registry.openshift-image-registry.svc:5000/package-manager/rstudio-package-manager@sha256:8c640f9b06a6116d92d427ce961ec8d90e30d06e6c68d7454c771448da756fa7
      - type: ConfigChange
    replicas: 1
    revisionHistoryLimit: 10
    test: false
    selector:
      app: rstudio-package-manager
      deploymentconfig: rstudio-package-manager
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: rstudio-package-manager
          deploymentconfig: rstudio-package-manager
        annotations:
          openshift.io/generated-by: OpenShiftWebConsole
      spec:
        restartPolicy: Always
        serviceAccountName: rspm-sa
        schedulerName: default-scheduler
        terminationGracePeriodSeconds: 30
        securityContext: {}
        containers:
          - name: rstudio-package-manager
            image: >-
              image-registry.openshift-image-registry.svc:5000/package-manager/rstudio-package-manager@sha256:8c640f9b06a6116d92d427ce961ec8d90e30d06e6c68d7454c771448da756fa7
            ports:
              - containerPort: 2112
                protocol: TCP
              - containerPort: 4242
                protocol: TCP
            resources: {}
            volumeMounts:
              - name: rstudio-package-manager-1
                mountPath: /data
            terminationMessagePath: /dev/termination-log
            terminationMessagePolicy: File
            imagePullPolicy: IfNotPresent
        serviceAccount: rspm-sa
        volumes:
          - name: rstudio-package-manager-1
            emptyDir: {}
        dnsPolicy: ClusterFirst
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    name: rstudio-package-manager
    namespace: package-manager
    labels:
      app: rstudio-package-manager
      app.kubernetes.io/component: rstudio-package-manager
      app.kubernetes.io/instance: rstudio-package-manager
      app.kubernetes.io/part-of: rstudio-package-manager-app
  spec:
    ports:
      - name: 2112-tcp
        protocol: TCP
        port: 2112
        targetPort: 2112
      - name: 4242-tcp
        protocol: TCP
        port: 4242
        targetPort: 4242
    selector:
      app: rstudio-package-manager
      deploymentconfig: rstudio-package-manager
    type: ClusterIP
    sessionAffinity: None
  status:
    loadBalancer: {}
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    name: rstudio-package-manager
    namespace: package-manager
    labels:
      app: rstudio-package-manager
      app.kubernetes.io/component: rstudio-package-manager
      app.kubernetes.io/instance: rstudio-package-manager
      app.kubernetes.io/part-of: rstudio-package-manager-app
  spec:
    host: rspm.apps.dit-devocp.novartis.net
    to:
      kind: Service
      name: rstudio-package-manager
      weight: 100
    port:
      targetPort: 2112-tcp
    wildcardPolicy: None
